--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -22,6 +22,17 @@
             <button id="btnConnecter" class="btn btn-primary"><p>Se connecter</p></button>
         </header>
 
+        <header>
+            <img id ="logo" src="/img/logo.png">
+            <div id="title"><a href="index.html">Atypik'House</a></div>
+            <button id="btnDeco" class="btn btn-deconnexion"><p>Deconnexion</p></button>
+            <img id ="cloche" src="/img/header/cloche.png">
+            <img id ="cloche" src="/img/header/clocheNotif.png">
+            <div id="Utilisateur">Bienvenue Zoé</div>
+            <img id ="avatarLogin" src="/img/header/avatarLogin.png">
+</header>
+
+
         {% block body %}{% endblock %}
 
         <footer class="footer">
