--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -53,9 +53,9 @@ h3 {
     <form>
         <div class="form-group">
             <select class="form-control" id="selectHousingType">
-                <option>Type de logement</option>
-                <option>Yourte</option>
-                <option>Bulle</option>
+            {% for type in types %}
+                <option value="{{ type.id }}">{{ type.type }}</option>
+            {% endfor %}
             </select>
         </div>
         <div class="form-group">
@@ -83,7 +83,7 @@ h3 {
         </div>
         <div class="form-group">
             <select class="form-control" id="selectTravelers">
-                <option>Voyageurs</option>
+                <option disabled selected>Nombre de voyageurs :</option>
                 <option>1</option>
                 <option>2</option>
             </select>
