--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
 
  <nav class="navbar navbar-expand-lg navbar-light">
   <img id ="logo" src="/img/logo.png">
-   <div id="title"><a href="index.html">Atypik'House</a></div>
+   <div id="title"><a href="/">Atypik'House</a></div>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -28,33 +28,18 @@
       <li class="nav-item active">
       
     </ul>
-           <button id="btnInscrire" type="button" class="btn btn-success"><p>S'inscrire</p></button>
-            <button id="btnConnecter" class="btn btn-primary"><p>Se connecter</p></button>
+    {% if is_granted('IS_AUTHENTICATED_FULLY') %}
+        <img id ="avatarLogin" src="/img/header/avatarLogin.png">  
+        <div id="Utilisateur">Bienvenue {{ app.user.prenom }}</div>
+        <img id ="cloche" src="/img/header/cloche.png">
+        <!--<img id ="cloche" src="/img/header/clocheNotif.png">-->
+        <button id="btnDeco" class="btn btn-deconnexion" onclick="location.href='/logout'"><p>Deconnexion</p></button>
+    {% else %}
+            <button id="btnInscrire" type="button" class="btn btn-success" onclick="location.href='/register'"><p>S'inscrire</p></button>
+            <button id="btnConnecter" class="btn btn-primary" onclick="location.href='/login'"><p>Se connecter</p></button>
+    {% endif %}           
   </div>
 </nav>
-
-
- <nav class="navbar navbar-expand-lg navbar-light">
-  <img id ="logo" src="/img/logo.png">
-   <div id="title"><a href="index.html">Atypik'House</a></div>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-      
-    </ul>
-            <img id ="avatarLogin" src="/img/header/avatarLogin.png">  
-            <div id="Utilisateur">Bienvenue Zoé</div>
-            <img id ="cloche" src="/img/header/cloche.png">
-            <img id ="cloche" src="/img/header/clocheNotif.png">
-            <button id="btnDeco" class="btn btn-deconnexion"><p>Deconnexion</p></button>
-  </div>
-</nav>
-
-
         {% block body %}{% endblock %}
 
         <footer class="footer">
