--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -20,12 +20,10 @@ h3 {
     margin-top: 3em;
 }
 
-#nightDream .row {
-    margin-bottom: 3em;
-}
-
 #nightDream img {
     width: 100%;
+    height: 450px;
+    object-fit: cover;
 }
 
 #nightDream .content {
@@ -45,6 +43,8 @@ h3 {
 
 .carousel-item img {
     width: 33%;
+    height: 200px;
+    object-fit: cover;
 }
 
 </style>
