--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -87,16 +87,17 @@
 
 
 #formulaire > img{
-	height: 37.5em;
+	height: 30rem;
 	width: 100%; 
 	background-attachment:fixed;
+	object-fit: cover;
 }
 
 #formulaire form{
 	position:absolute;
 	right: 0; 
-	margin-right: 6.25em;
-	margin-top: 8.125em; /* poussé de la moitié de hauteur de viewport */
+	margin-right: 6.25rem;
+    margin-top: 6rem;
 	
 }
 
