responsivité des articles #11

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -47,6 +47,17 @@ h3 {
     object-fit: cover;
 }
 
+@media (max-width: 768px) { 
+    .deuxiemeDiv{
+        flex-direction: column-reverse;
+    }
+    #nightDream .content {
+         width: 100%;
+        padding: 1rem;
+    }
+}
+
+
 </style>
 
 <div id="formulaire">
@@ -101,7 +112,7 @@ h3 {
             </div>
         </div>
     </div>
-    <div class="row">
+    <div class="row deuxiemeDiv">
         <div class="col-sm-6 d-flex align-items-center">
             <div class="content">
                 <h4>Sail the high seas</h4>
