--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -5,6 +5,7 @@
         <title>{% block title %}Welcome!{% endblock %}</title>
         {% block stylesheet %}
            <link rel="stylesheet" href="/css/bootstrap.min.css">
+           <link rel="stylesheet" href="/css/jquery-ui.min.css">
            <link rel="stylesheet" href="/css/styles.css">
            <link href="https://unpkg.com/gijgo@1.9.11/css/gijgo.min.css" rel="stylesheet" type="text/css" />
         {% endblock %}
@@ -84,8 +85,9 @@
         </footer>
         {% block javascripts %}
            <script type="text/javascript" src="/js/jquery.min.js"></script>
+           <script type="text/javascript" src="/js/jquery-ui.min.js"></script>
            <script type="text/javascript" src="/js/bootstrap.min.js"></script>
-           <script src="https://unpkg.com/gijgo@1.9.11/js/gijgo.min.js" type="text/javascript"></script>
+           <script type="text/javascript" src="/js/gijgo.min.js"></script>
            <script type="text/javascript" src="/js/slider.js"></script>
            <script type="text/javascript" src="/js/global.js"></script>
         {% endblock %}
