--- a/templates/form-recherche.html.twig
+++ b/templates/form-recherche.html.twig
@@ -1,34 +1,20 @@
 <form action="/recherche" method="post">
     <div class="form-group">
         <select class="form-control" id="selectHousingType" name="type">
-            <option disabled selected>Sélectionner un logement :</option>
+            <option disabled {% if data['type'] == 0 %} selected {% endif %}>Sélectionner un logement :</option>
         {% for type in types %}
-            <option value="{{ type.id }}">{{ type.type }}</option>
+            <option value="{{ type.id }}" {% if data['type'] == type.id %} selected {% endif %}>{{ type.type }}</option>
         {% endfor %}
         </select>
     </div>
     <div class="form-group">
-        <select class="form-control" id="selectLocation" name="ville">
-            <option>Lieu</option>
-            <option>Bordeaux</option>
-            <option>Lyon</option>
-        </select>
+        <input type="text" class="form-control" name="ville" id="villeAuto"/>
     </div>
     <div class="form-group">
-        <input type="text" class="form-control" id="inputDepartureDate" placeholder="Date de départ">
-        <script>
-            $('#inputDepartureDate').datepicker({
-                uiLibrary: 'bootstrap4'
-            });
-        </script>
+        <input type="text" class="form-control" id="inputDepartureDate" placeholder="Date de départ" value="{{ data['depart'] }}" name="depart">
     </div>
     <div class="form-group">
-        <input type="text" class="form-control" id="inputArrivalDate" placeholder="Date d'arrivée">
-        <script>
-            $('#inputArrivalDate').datepicker({
-                uiLibrary: 'bootstrap4'
-            });
-        </script>
+        <input type="text" class="form-control" id="inputArrivalDate" placeholder="Date d'arrivée" value="{{ data['arrivee'] }}" name="arrivee">
     </div>    
     <div class="form-group">
         <select class="form-control" id="selectTravelers" name="nb">
