--- a/templates/base-bo.html.twig
+++ b/templates/base-bo.html.twig
@@ -2,7 +2,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>Back Office - {% block title %}{% endblock %}</title>
+        <link rel="icon" type="image/png" href="/img/logo.png" />
         {% block stylesheets %}
             <link rel="stylesheet" href="/css/bootstrap.min.css">
         {% endblock %}
