--- a/templates/base-bo.html.twig
+++ b/templates/base-bo.html.twig
@@ -21,6 +21,9 @@
                             <a class="nav-link" href="{{ path('logement_liste') }}">Logements</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link" href="#">Commentaires</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link" href="#">Utilisateurs</a>
                         </li>
                         <li class="nav-item">
