--- a/templates/admin/logement/logement-edit.html.twig
+++ b/templates/admin/logement/logement-edit.html.twig
@@ -21,6 +21,7 @@
     {{ form_start(form) }}
         {{ form_widget(form) }}
         <br>
+        <h4>Paramètres de l'habitat</h4>
         {% for p in params %}
             <label for="param-{{ p.id }}">{{ p.getParametre().getNom() }}</label>
             <input type="text" name="param[{{ p.id }}]" value="{{ p.valeur }}" class="form-control"/>
