--- a/templates/admin/logement/logement-new.html.twig
+++ b/templates/admin/logement/logement-new.html.twig
@@ -15,7 +15,9 @@
     <br>
     {{ form_start(form) }}
         {{ form_widget(form) }}
+        <br>
         <div id="parametres">
+            <h4>Paramètres de l'habitat</h4>
         </div>
         <br>
         <button class="btn btn-success">Enregistrer</button>
