--- a/templates/form-recherche.html.twig
+++ b/templates/form-recherche.html.twig
@@ -8,7 +8,7 @@
         </select>
     </div>
     <div class="form-group">
-        <input type="text" class="form-control" name="ville" id="villeAuto"/>
+        <input type="text" class="form-control" name="ville" id="villeAuto" placeholder="Ville"/>
     </div>
     <div class="form-group">
         <input type="text" class="form-control" id="inputDepartureDate" placeholder="Date de départ" value="{{ data['depart'] }}" name="depart">
@@ -17,11 +17,12 @@
         <input type="text" class="form-control" id="inputArrivalDate" placeholder="Date d'arrivée" value="{{ data['arrivee'] }}" name="arrivee">
     </div>    
     <div class="form-group">
-        <select class="form-control" id="selectTravelers" name="nb">
+        <input type="number" name="nb" class="form-control" id="selectTravelers" min="1" max="10" placeholder="Nombre de voyageurs" value="{{ data['nb'] }}"/>
+        <!--<select class="form-control" id="selectTravelers" name="nb">
             <option disabled selected>Nombre de voyageurs :</option>
             <option>1</option>
             <option>2</option>
-        </select>
+        </select>-->
     </div>
     <button type="submit" class="btn btn-recherche">Rechercher</button>
 </form>
