--- a/templates/home/recherche.html.twig
+++ b/templates/home/recherche.html.twig
@@ -11,12 +11,17 @@
 </div>
   <br/>
 <div class="container">
-  
-    <!-- Example row of columns -->
+    {% if logements is empty %}
+        <div class="row">
+      <div class="col-sm3">
+        <h1>Aucun résultats</h1>
+      </div>
+    </div>
+    {% else %}
     <div class="row">
-     <div class="col-sm3">
-      <h1>Résultats de la recherche:</h1>
-     </div>
+      <div class="col-sm3">
+        <h1>Résultats de la recherche:</h1>
+      </div>
     </div>
     <div class="card-deck">
       {% for lo in logements %}
@@ -30,7 +35,8 @@
           </div>
         </div>
       {% endfor %}
-      <div class="card">
+    {% endif %}
+      <!--<div class="card">
         <img class="card-img-top" src="/img/yourte.jpg" alt="Card image cap">
         <div class="card-body">
           <h4 class="card-title">Yourte</h4>
@@ -107,7 +113,7 @@
           <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus </p>
            <buttont type="button" class="btn btn-consulter"><a href="" class="a-consulter">Consulter</a></button>
         </div>
-      </div>
+      </div>-->
     </div>
 </div>
 
