ajout des villes

--- a/templates/base-bo.html.twig
+++ b/templates/base-bo.html.twig
@@ -40,6 +40,7 @@
             {% block body %}{% endblock %}
             {% block javascripts %}
                 <script src="/js/jquery.min.js"></script>
+                <script type="text/javascript" src="/js/jquery-ui.min.js"></script>
                 <script src="/js/bootstrap.min.js"></script>
                 <script src="/js/bo.js"></script>
             {% endblock %}
