--- a/templates/admin/logement/logement-edit.html.twig
+++ b/templates/admin/logement/logement-edit.html.twig
@@ -20,6 +20,9 @@
     <br>
     {{ form_start(form) }}
         {{ form_widget(form) }}
+        <label for="villeSearch">Ville</label>
+        <input type="text" class="form-control" name="villeSearch" id="villeSearch"/>
+        <input type="hidden" value="" id="villeSearchId" />
         <br>
         <h4>Paramètres de l'habitat</h4>
         {% for p in params %}
