--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -104,29 +104,21 @@
         </div>
       </div>
     </div>
-
     <hr>
-
-    <!-- Social buttons -->
     <ul class="list-unstyled list-inline text-center">
       <li class="list-inline-item">
-          <img href="" src="img\icones\fb.svg"/>
+          <img href="" src="/img/icones/fb.svg"/>
       </li>
       <li class="list-inline-item">
-        <img href="" src="img\icones\insta.svg"/>
+        <img href="" src="/img/icones/insta.svg"/>
       </li>
       <li class="list-inline-item">
-        <img href="" src="img\icones\google_plus.svg"/>
+        <img href="" src="/img/icones/google_plus.svg"/>
       </li>
     </ul>
-    <!-- Social buttons -->
-
-    <!-- Copyright -->
     <div class="footer-copyright text-center">© 2018 Copyright:
       <a href=""> Code&Rise</a>
     </div>
-    <!-- Copyright -->
-
 </footer>
 
         {% block javascripts %}
