--- a/templates/logement/index.html.twig
+++ b/templates/logement/index.html.twig
@@ -5,10 +5,20 @@
 {% block body %}
 
 <div id="formulaire">
-<div id="transparence-form-prod"></div>
+  <form action="/logement/{{ logement.id }}/reservation" method="post">
+    <div class="form-group">
+      <input type="text" class="form-control" name="dateDebut" id="dateDebut" />
+    </div>
+    <div class="form-group">
+      <input type="text" class="form-control" name="dateFin" id="dateFin" />
+    </div>
+    <div class="form-group">
+        <input type="number" name="nb" class="form-control" min="1" max="{{ logement.nbPersonne }}" placeholder="Nombre de voyageurs"/>
+    </div>
+    <button type="submit" class="btn btn-recherche">Rechercher</button>
+  </form>
   <button type="button" class="btn btn-photo"  onclick="openModal();currentSlide(1)">Voir les photos</button>
   <img src="/img/cabane2.jpg"/>
-
 </div>
 
 <div id="myModalSlider" class="modalSlider">
@@ -164,6 +174,7 @@
     <div class="col-lg-12">
     <center>
       <h4>Localisez l'hébergement</h4>
+      {{ logement.adresse ~ ' ' ~ logement.codePostal ~ ' ' ~ logement.getVille().getNom() }}
       <br/>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5737941.053577054!2d-0.5600409326626958!3d45.39463663443821!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ab22a7cd2b8547%3A0xe10e3cdc7f734cdc!2sLes+cabanes+dans+les+arbres!5e0!3m2!1sfr!2sfr!4v1544963589952"  height="550" frameborder="0" style="border:0; width: 100%" allowfullscreen></iframe>
     </center>
@@ -180,8 +191,7 @@
     <div class="row">
         <div class="comments col-md-12" id="comments">
             <h3 class="mb-2">Commentaires</h3>
-            <!-- comment -->
-            <div class="comment mb-2 row">
+            <!--<div class="comment mb-2 row">
                 <div class="comment-avatar col-md-1 col-sm-2 text-center pr-1">
                     <a href=""><img class="mx-auto rounded-circle img-fluid" src="http://demos.themes.guide/bodeo/assets/images/users/m103.jpg" alt="avatar"></a>
                 </div>
@@ -225,7 +235,7 @@
                         </p>
                     </div>
                 </div>
-            </div>
+            </div>-->
             <div class="row pt-2">
                 <div class="col-12">
                     <a href="" class="btn btn-sm btn-primary">Comment</a>
