faire une réservation #16

--- a/templates/logement/index.html.twig
+++ b/templates/logement/index.html.twig
@@ -4,18 +4,23 @@
 
 {% block body %}
 
-<div id="formulaire">
+<div id="formulaire">  
   <form action="/logement/{{ logement.id }}/reservation" method="post">
+    {% for flash_message in app.session.flashBag.get('error') %}
+      <div class="alert alert-danger">
+          {{ flash_message }}
+      </div>
+    {% endfor %}
     <div class="form-group">
-      <input type="text" class="form-control" name="dateDebut" id="dateDebut" />
+      <input type="text" class="form-control" name="dateDebut" id="dateDebut" value="{{ "now"|date("d/m/Y") }}"/>
     </div>
     <div class="form-group">
-      <input type="text" class="form-control" name="dateFin" id="dateFin" />
+      <input type="text" class="form-control" name="dateFin" id="dateFin" value="{{ "tomorrow"|date("d/m/Y") }}"/>
     </div>
     <div class="form-group">
-        <input type="number" name="nb" class="form-control" min="1" max="{{ logement.nbPersonne }}" placeholder="Nombre de voyageurs"/>
+        <input type="number" name="nbPersonne" class="form-control" min="1" max="{{ logement.nbPersonne }}" placeholder="Nombre de voyageurs" value="1"/>
     </div>
-    <button type="submit" class="btn btn-recherche">Rechercher</button>
+    <button type="submit" class="btn btn-recherche">Réserver</button>
   </form>
   <button type="button" class="btn btn-photo"  onclick="openModal();currentSlide(1)">Voir les photos</button>
   <img src="/img/cabane2.jpg"/>
