--- a/templates/admin/logement/logement-show.html.twig
+++ b/templates/admin/logement/logement-show.html.twig
@@ -1,46 +1,33 @@
-{% extends 'base.html.twig' %}
+{% extends 'base-bo.html.twig' %}
 
-{% block title %}Logement{% endblock %}
+{% block title %}Aperçu : {{ logement.nom }}{% endblock %}
 
 {% block body %}
-    <h1>Logement</h1>
-
+    <div class="row mx-auto my-2">
+        <a href="{{ path('logement_liste') }}">Retour</a>
+    </div>
+    <h3>{{ logement.nom }}</h3>
+    <a href="" class="btn btn-info">Modifier</a>
+    {{ include('admin/logement/logement-delete-form.html.twig') }}
+    <br><br>
+    <img src="/img/cabane2.jpg" />
     <table class="table">
         <tbody>
             <tr>
-                <th>Id</th>
-                <td>{{ logement.id }}</td>
-            </tr>
-            <tr>
-                <th>Nom</th>
-                <td>{{ logement.nom }}</td>
-            </tr>
-            <tr>
                 <th>Description</th>
+            </tr>
+            <tr>
                 <td>{{ logement.description }}</td>
             </tr>
             <tr>
-                <th>NbVoyageur</th>
-                <td>{{ logement.nbVoyageur }}</td>
-            </tr>
-            <tr>
-                <th>NbLits</th>
-                <td>{{ logement.nbLits }}</td>
-            </tr>
-            <tr>
-                <th>NbSalledeBain</th>
-                <td>{{ logement.nbSalledeBain }}</td>
+                <th>Paramètres</th>
             </tr>
             <tr>
                 <th>Prix</th>
-                <td>{{ logement.prix }}</td>
+                <td>{{ logement.prix }} € / nuit</td>
             </tr>
         </tbody>
     </table>
 
-    <a href="{{ path('logement_liste') }}">back to list</a>
-
-    <a href="{{ path('logement_edit', {'id': logement.id}) }}">edit</a>
-
-    {{ include('logement/_delete_form.html.twig') }}
+    
 {% endblock %}
