--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -96,7 +96,7 @@ h3 {
 </div>
 
  <div class="container carouselmarge">
- <h3>Nos différents types de Logements</h3>
+ <h3>Nos différents types de logements</h3>
   <div class="row flex-xl-nowrap">
     <div class="col-12">
       <div class="bd-example">
@@ -104,43 +104,55 @@ h3 {
           <div class="carousel-inner">
             <div class="carousel-item active">
               <div class="block4-wrap">
-                <div class="block4"><img class="d-block w-100" src="https://a0.muscache.com/im/pictures/75821679/593e0a8a_original.jpg?aki_policy=xx_large" alt="First slide">
+                <div class="block4"><img class="d-block w-100" src="/img/types-habitat/peniche.jpg" alt="Péniche">
                   <div class="my-captions">
                     <h5>Péniches</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                   </div>
                 </div>
-                <div class="block4"><img class="d-block w-100" src="https://a0.muscache.com/im/pictures/338c3a2c-8912-4553-89c3-ca8a9789929d.jpg?aki_policy=xx_large" alt="First slide">
+                <div class="block4"><img class="d-block w-100" src="/img/types-habitat/tipis.jpg" alt="Tipis">
                   <div class="my-captions">
                     <h5>Tipis</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
                   </div>
                 </div>
-                <div class="block4"><img class="d-block w-100" src="https://www.equinoxmagazine.fr/wp-content/uploads/2016/09/bulle-2.png" alt="First slide">
+                <div class="block4"><img class="d-block w-100" src="/img/types-habitat/bulle.png" alt="Bulle">
                   <div class="my-captions">
-                    <h5>bulles</h5>
+                    <h5>Bulles</h5>
                     <p>Nulla vitae elit libero, a pharetra augue mollis interdum.</p>
+                  </div>
+                </div>
+                <div class="block4"> <img class="d-block w-100" src="/img/types-habitat/cabane.jpg" alt="Cabane">
+                  <div class="my-captions">
+                    <h5>Cabanes</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                   </div>
                 </div>
               </div>
             </div>
             <div class="carousel-item">
               <div class="block4-wrap">
-                <div class="block4"> <img class="d-block w-100" src="https://a0.muscache.com/im/pictures/37666345/a3e83515_original.jpg?aki_policy=xx_large" alt="Second slide">
+                <div class="block4"> <img class="d-block w-100" src="/img/types-habitat/nid.jpg" alt="Nid">
                   <div class="my-captions">
-                    <h5>Cabanes</h5>
+                    <h5>Nid</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                   </div>
                 </div>
-                <div class="block4"> <img class="d-block w-100" src="https://a0.muscache.com/im/pictures/79896742/bbe50157_original.jpg?aki_policy=xx_large" alt="Second slide">
+                <div class="block4"> <img class="d-block w-100" src="/img/types-habitat/yourte.jpg" alt="Yourte">
                   <div class="my-captions">
                     <h5>Youtes</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                   </div>
                 </div>
-                <div class="block4"> <img class="d-block w-100" src="https://a0.muscache.com/im/pictures/8cbf5879-04e8-41fd-a011-0c717799dc72.jpg?aki_policy=xx_large" alt="Second slide">
+                <div class="block4"> <img class="d-block w-100" src="/img/types-habitat/gite.jpg" alt="Gîte">
                   <div class="my-captions">
                     <h5>Gites</h5>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                  </div>
+                </div>
+                <div class="block4"> <img class="d-block w-100" src="/img/types-habitat/roulotte.jpg" alt="Roulotte">
+                  <div class="my-captions">
+                    <h5>Roulottes</h5>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
                   </div>
                 </div>
