--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <title>Atypik'House > {% block title %}{% endblock %}</title>
         <link rel="icon" type="image/png" href="/img/logo.png" />
         {% block stylesheet %}
            <link rel="stylesheet" href="/css/bootstrap.min.css">
