--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -89,7 +89,11 @@ h3 {
 }
 </style>
 
-
+{% for flash_message in app.session.flashBag.get('success') %}
+    <div class="alert alert-success">
+        {{ flash_message }}
+    </div>
+{% endfor %}
 <div id="formulaire">
     {% include 'form-recherche.html.twig' %}
     <img src="/img/imageFormRecherche.png"/>
