--- a/templates/admin/reservation/reservation-index.html.twig
+++ b/templates/admin/reservation/reservation-index.html.twig
@@ -4,37 +4,40 @@
 
 {% block body %}
     <h3>Liste des réservations</h3>
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Logement</th>
-                <th>Date de début</th>
-                <th>Date de fin</th>
-                <th>Réservée le</th>
-                <th>Nombre de personnes</th>
-                <th>Prix Total
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for reservation in reservations %}
-            <tr>
-                <td><a href="{{ path('logement_show', {'id': reservation.getLogement().getId()}) }}">{{ reservation.getLogement().getNom() }}</a></td>
-                <td>{{ reservation.dateDebut ? reservation.dateDebut|date('d/m/Y') : '' }}</td>
-                <td>{{ reservation.dateFin ? reservation.dateFin|date('d/m/Y') : '' }}</td>
-                <td>{{ reservation.dateCreation ? reservation.dateCreation|date('d/m/Y H:i:s') : '' }}</td>
-                <td>{{ reservation.nbPersonne }}</td>
-                <td>{{ reservation.getPrixResa()}} €</td>
-                <td>
-                    <a href="{{ path('reservation_show', {'id': reservation.id}) }}">show</a>
-                    <a href="{{ path('reservation_edit', {'id': reservation.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="6">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+    <br>    
+    <div class="row mx-auto my-2">
+        <table class="table">
+            <thead>
+                <tr>
+                    <th>Logement</th>
+                    <th>Date de début</th>
+                    <th>Date de fin</th>
+                    <th>Réservée le</th>
+                    <th>Nombre de personnes</th>
+                    <th>Prix Total
+                    <th>actions</th>
+                </tr>
+            </thead>
+            <tbody>
+            {% for reservation in reservations %}
+                <tr>
+                    <td><a href="{{ path('logement_show', {'id': reservation.getLogement().getId()}) }}">{{ reservation.getLogement().getNom() }}</a></td>
+                    <td>{{ reservation.dateDebut ? reservation.dateDebut|date('d/m/Y') : '' }}</td>
+                    <td>{{ reservation.dateFin ? reservation.dateFin|date('d/m/Y') : '' }}</td>
+                    <td>{{ reservation.dateCreation ? reservation.dateCreation|date('d/m/Y H:i:s') : '' }}</td>
+                    <td>{{ reservation.nbPersonne }}</td>
+                    <td>{{ reservation.getPrixResa()}} €</td>
+                    <td>
+                        <a href="{{ path('reservation_show', {'id': reservation.id}) }}">show</a>
+                        <a href="{{ path('reservation_edit', {'id': reservation.id}) }}">edit</a>
+                    </td>
+                </tr>
+            {% else %}
+                <tr>
+                    <td colspan="6" align="center">Aucun résultat</td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
 {% endblock %}
