--- a/templates/base-bo.html.twig
+++ b/templates/base-bo.html.twig
@@ -40,7 +40,7 @@
                             </div>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">Utilisateurs</a>
+                            <a class="nav-link" href="{{ path('utilisateur_liste') }}">Utilisateurs</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">Taxes (Ville)</a>
