--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}Connexion{% endblock %}
 
 {% block body %}
 <div class="container">
@@ -14,9 +14,10 @@
             <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
         {% endif %}
         <h1 class="h3 mb-3 font-weight-normal">Connectez-vous !</h1>
-        <label for="inputEmail" class="sr-only">Email</label>
+        <label for="inputEmail" class="sr-only">Adresse Email</label>
         <input type="email" value="{{ last_username }}" name="_username" id="inputEmail" class="form-control" placeholder="Votre adresse e-mail" required autofocus>
-        <label for="inputPassword" class="sr-only">Password</label>
+        <br>
+        <label for="inputPassword" class="sr-only">Mot de passe</label>
         <input type="password" name="_password" id="inputPassword" class="form-control" placeholder="Votre mot de passe" required>
         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
         <br>
